shared/2-ng.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx2
  namespace: nginx
  labels:
    app: nginx2
    service: nginx2
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: nginx2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx2
  namespace: nginx
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: nginx2
      namespace: nginx
  template:
    metadata:
      labels:
        app: nginx2
        namespace: nginx
    spec:
      containers:
        - name: nginx2
          image: aayush808/nginx:v2.0
          ports:
            - containerPort: 80
