shared/route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx
  namespace: nginx
spec:
  parentRefs:
    - name: shared-gateway
      namespace: default
  hostnames:
    - "nginx-v1.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: nginx1
          namespace: nginx
          port: 80
          weight: 10
        - group: ""
          kind: Service
          name: nginx2
          namespace: nginx
          port: 80
          weight: 90
      matches:
        - path:
            type: PathPrefix
            value: /
